--- a/mod/mod/module.ifo.yml
+++ b/mod/mod/module.ifo.yml
@@ -62,6 +62,7 @@ Mod_HakList:
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_icon}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_cep2c}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: wizard_hats}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: dynamicgear}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: anthravfx}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: anthvfxfirework}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: primweapons}}
