Wildnis 01, Wildnis Timmryl: backport old location from 07efab182

--- a/mod/area/wildnis_timrryl.git.yml
+++ b/mod/area/wildnis_timrryl.git.yml
@@ -28,7 +28,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 30}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 50}
@@ -46,7 +46,7 @@ Door List:
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: key_timrryl}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: nord_04_2_wildnis_timrryl}
+    LinkedTo: {type: :cexostr, value: wildnis01_2_timrryl}
     LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
@@ -74,7 +74,7 @@ Door List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 0}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: wildnis_timrryl_2_nord_04}
+    Tag: {type: :cexostr, value: wildnis_timmryl_2_wildnis01}
     TemplateResRef: {type: :resref, value: house_door}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -101,7 +101,7 @@ Door List:
     AnimationState: {type: :byte, value: 2}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 15}
