--- a/mod/area/wildnis_timrryl.are.yml
+++ b/mod/area/wildnis_timrryl.are.yml
@@ -28,7 +28,7 @@ MoonShadows: {type: :byte, value: 0}
 Name: 
   type: :cexolocstr
   value: 
-    0: Corryl & Timra
+    0: Haus in der Wildnis
 NoRest: {type: :byte, value: 0}
 OnEnter: {type: :resref, value: sr_enter_inside}
 OnExit: {type: :resref, value: _area_leave}
